# api/controllers/bedelos.TeamMeldung.js
@@ -16,17 +16,30 @@ var PdfPage = require('../helpers/PdfPage');
 var PdfTable = require('../helpers/PdfTable');
 var Spielplan = require('../helpers/Spielplan');
 
-function getField(oField) {
-    if(oField!==0) {
-        return ""+oField;
-    } else {
-        return "";
+function ask(req, res) {
+    var sPath = path.resolve(config.get("bedelos.datapath"));
+    var oTeams = jsonfile.readFileSync(sPath + '/Teams.json');
+
+    // aTeams is just needed for typeahead fields in form
+    var aTeams = [];
+    for(var team in oTeams) {
+        aTeams.push({
+            id: team,
+            name: oTeams[team].name + " - " + team
+        });
     }
+
+    var html = pug.renderFile("api/views/teamMeldungSelection.jade", {
+        pretty: true,
+        sTeams: JSON.stringify(aTeams)
+    });
+
+    res.status(200).send(html);
 }
 
-function getTable (req, res) {
+function generatePDF (req, res) {
     try {
-        var oSessionData = session.get(req.cookies.BDL_SESSION_TOKEN);
+        /*var oSessionData = session.get(req.cookies.BDL_SESSION_TOKEN);
 
         if (!oSessionData) {
             res.cookie('BDL_SESSION_REDIRECT', req.url);
@@ -37,12 +50,27 @@ function getTable (req, res) {
         if (oSessionData.username === config.get("bedelos.adminuser")) {
             res.status(200).send(pug.renderFile("api/views/authorizederror.jade"));
             return;
-        }
+        }*/
         var sPath = path.resolve(config.get("bedelos.datapath"));
         var oTeams = require(sPath + '/Teams.json');
         var oSpielplan = require(path.resolve(sPath,'Spielplan.json'));
         var spielplanHelper = new Spielplan(oSpielplan, oTeams);
-        let liga = ligaHelper.getFullLigaName(spielplanHelper.getLigaFor(oSessionData.username));
+
+        let teamId = (req.swagger.params.teamId) ? (req.swagger.params.teamId.raw) : '';
+        let team = (teamId !== '') ? oTeams[teamId] : {
+                name: '',
+                teamvertreter: {
+                    name: '',
+                    mail: '',
+                    tel: ''
+                },
+                spiellokal: {
+                    name: '',
+                    strasse: '',
+                    ort: ''
+                }
+            };
+        let liga = ligaHelper.getFullLigaName(spielplanHelper.getLigaFor(teamId));
 
         let date = moment().format('DD.MM.YYYY');
 
@@ -53,7 +81,7 @@ function getTable (req, res) {
                         table: {
                             widths: ['*', 120],
                             body: [
-                                [{ text: `Teammeldung für Team\n"${oTeams[oSessionData.username].name}"`, style: 'h1' },
+                                [(teamId !== '') ? { text: `Teammeldung für Team\n"${team.name}"`, style: 'h1' } : { text: `Meldung für neues Team\n`, style: 'h1' },
                                  {
                                     image: path.resolve(config.get("static.dir") + '/spielbericht/app/images/BDLLogo.png'),
                                     width: 120,
@@ -68,40 +96,67 @@ function getTable (req, res) {
         pdfPage.add({text: `EMAIL an spielleiter@badischedartliga.de`, style: 'h3'});
         pdfPage.add({text: `${date}`, style: 'text', alignment: 'right'});
         pdfPage.add({text: '\n\nHiermit melden wir für die kommende Saison folgendes Team:\n\n\n    ', style: 'text'});
-        pdfPage.add({
-                        style: 'table',
-                        table: {
-                            widths: [150, '*', '*'],
-                            body: [
-                                    [
-                                        { text: ' ', style: 'tableHeader', alignment: 'center', noWrap: true},
-                                        { text: 'Aktuell', style: 'tableHeader', alignment: 'center', noWrap: true},
-                                        { text: 'Änderungen', style: 'tableHeader', alignment: 'center', noWrap: true}],
-                                    [{text:'\nVerein:', style: 'bold'},
-                                        {text:'\n', style: 'text'},
-                                        {text:'\n_____________________________________', style: 'text'}],
-                                    [{text:'\nTeam (ID):', style: 'bold'},
-                                        {text:`\n${oTeams[oSessionData.username].name} (${oSessionData.username})`, style: 'text'},
-                                        {text:'\n_____________________________________', style: 'text'}],
-                                    [{text:'\nLiga (bisher):', style: 'bold'},
-                                        {text:`\n${liga}`, style: 'text'},
-                                        {text:'\n_____________________________________', style: 'text'}],
-                                    [{text:'\nKapitän:', style: 'bold'}, {
-                                        text:`\n${oTeams[oSessionData.username].teamvertreter.name}\n${oTeams[oSessionData.username].teamvertreter.mail}\n${oTeams[oSessionData.username].teamvertreter.tel}`,
-                                        style: 'text'
-                                    },
-                                        {text:'\n_____________________________________\n\n_____________________________________\n\n_____________________________________', style: 'text'}],
-                                    [{text:'\nSpielstädte:', style: 'bold'}, {
-                                        text:`\n${oTeams[oSessionData.username].spiellokal.name}\n${oTeams[oSessionData.username].spiellokal.strasse}\n${oTeams[oSessionData.username].spiellokal.ort}`,
-                                        style: 'text'
-                                    },
-                                        {text:'\n_____________________________________\n\n_____________________________________\n\n_____________________________________', style: 'text'}]
-                            ],
+        let oFormular = (teamId === '')
+            ? {
+                style: 'table',
+                table: {
+                    widths: [150, 100, '*'],
+                    body: [
+                        [
+                            { text: ' ', style: 'tableHeader', alignment: 'center', noWrap: true},
+                            { text: ' ', style: 'tableHeader', alignment: 'center', noWrap: true},
+                            { text: 'Neumeldung', style: 'tableHeader', alignment: 'center', noWrap: true}],
+                        [{text:'\nVerein:', style: 'bold'},
+                            {text:'\n', style: 'text'},
+                            {text:'\n___________________________________________________', style: 'text'}],
+                        [{text:'\nTeamname:', style: 'bold'},
+                            {text:'\n', style: 'text'},
+                            {text:'\n___________________________________________________', style: 'text'}],
+                        [{text:'\nKapitän:', style: 'bold'},
+                            {text:'\nName: \n\nEMail: \n\nTel: ', style: 'text'},
+                            {text:'\n___________________________________________________\n\n___________________________________________________\n\n___________________________________________________', style: 'text'}],
+                        [{text:'\nSpielstädte:', style: 'bold'},
+                            {text:'\nName: \n\nStr.: \n\nPlz. & Ort: ', style: 'text'},
+                            {text:'\n___________________________________________________\n\n___________________________________________________\n\n___________________________________________________', style: 'text'}]
+                    ],
+                },
+                layout: 'noBorders'
+            } : {
+                style: 'table',
+                table: {
+                    widths: [150, '*', '*'],
+                    body: [
+                        [
+                            { text: ' ', style: 'tableHeader', alignment: 'center', noWrap: true},
+                            { text: 'Aktuell', style: 'tableHeader', alignment: 'center', noWrap: true},
+                            { text: 'Änderungen', style: 'tableHeader', alignment: 'center', noWrap: true}],
+                        [{text:'\nVerein:', style: 'bold'},
+                            {text:'\n', style: 'text'},
+                            {text:'\n_____________________________________', style: 'text'}],
+                        [{text:'\nTeam (ID):', style: 'bold'},
+                            {text:`\n${team.name} (${teamId})`, style: 'text'},
+                            {text:'\n_____________________________________', style: 'text'}],
+                        [{text:'\nLiga (bisher):', style: 'bold'},
+                            {text:`\n${liga}`, style: 'text'},
+                            {text:'\n_____________________________________', style: 'text'}],
+                        [{text:'\nKapitän:', style: 'bold'}, {
+                            text:`\n${team.teamvertreter.name}\n${team.teamvertreter.mail}\n${team.teamvertreter.tel}`,
+                            style: 'text'
                         },
-                        layout: 'noBorders'
-                    });
+                            {text:'\n_____________________________________\n\n_____________________________________\n\n_____________________________________', style: 'text'}],
+                        [{text:'\nSpielstädte:', style: 'bold'}, {
+                            text:`\n${team.spiellokal.name}\n${team.spiellokal.strasse}\n${team.spiellokal.ort}`,
+                            style: 'text'
+                        },
+                            {text:'\n_____________________________________\n\n_____________________________________\n\n_____________________________________', style: 'text'}]
+                    ],
+                },
+                layout: 'noBorders'
+            };
 
-        pdfPage.add({text: `\n\n\nSportliche Grüße,\n\n\ngez. ${oTeams[oSessionData.username].teamvertreter.name}`, style: 'text'});
+        pdfPage.add(oFormular);
+
+        pdfPage.add({text: `\n\n\nSportliche Grüße,\n\n\ngez. ${team.teamvertreter.name}`, style: 'text'});
 
 
 
@@ -120,5 +175,6 @@ function getTable (req, res) {
 }
 
 module.exports = {
-    get: getTable
+    get: ask,
+    post: generatePDF
 };
